--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@types/uuid": "^9.0.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "socket.io": "^4.5.4"
+    "socket.io": "^4.5.4",
+    "uuid": "^9.0.0"
   }
 }
