--- a/package.json
+++ b/package.json
@@ -20,12 +20,18 @@
     "concurrently": "^7.6.0",
     "eslint": "^8.33.0",
     "nodemon": "^2.0.20",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "prisma": "^4.10.1"
   },
   "dependencies": {
+    "@prisma/client": "^4.10.1",
     "@types/uuid": "^9.0.0",
+    "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "firebase-auth-middleware": "^1.0.0",
+    "mysql-client": "^0.3.0",
+    "prisma": "^4.10.1",
     "socket.io": "^4.5.4",
     "uuid": "^9.0.0"
   }
