--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "eslint": "^8.33.0",
     "firebase-auth-middleware": "^1.0.0",
     "mysql-client": "^0.3.0",
     "prisma": "^4.10.1",
