--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
   "scripts": {
     "prebuild": "eslint --ext .ts --fix src",
     "build": "tsc",
-    "watch": "tsc --watch",
+    "watch-ts": "tsc --watch",
+    "watch node": "nodemon dist/src/index.ts",
     "prestart": "npm run build",
-    "start": "concurrently --kill-others \"npm run watch\" \"nodemon .\""
+    "start": "node dist/src/index.ts",
+    "postinstall": "tsc",
+    "deploy": "git add . && git commit -m Heroku && git push heroku master"
   },
+  "engines": { "node": "18.6.0" },
   "author": "",
   "license": "ISC",
   "devDependencies": {
