--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "prestart": "npm run build",
     "start": "node dist/src/index.ts",
     "postinstall": "tsc",
-    "deploy": "git add . && git commit -m Heroku && git push heroku master"
+    "deploy": "git add . && git commit -m Heroku && git push heroku main"
   },
   "author": "",
   "license": "ISC",
