--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "name": "apdp-team2-video-chat-express",
   "version": "1.0.0",
   "description": "apdp team2 project",
+  "engines": {
+    "node": "18.6.0"
+  },
   "main": "dist/index.js",
   "scripts": {
     "prebuild": "eslint --ext .ts --fix src",
     "build": "tsc",
+    "watch-node": "nodemon dist/index.js",
     "watch-ts": "tsc --watch",
-    "watch node": "nodemon dist/src/index.ts",
     "prestart": "npm run build",
-    "start": "node dist/src/index.ts",
+    "start": "node dist/index.ts",
     "postinstall": "tsc",
     "deploy": "git add . && git commit -m Heroku && git push heroku main"
   },
