--- a/package.json
+++ b/package.json
@@ -5,14 +5,13 @@
   "engines": {
     "node": "18.6.0"
   },
-  "main": "dist/src/index.js",
+  "main": "dist/index.js",
   "scripts": {
     "prebuild": "eslint --ext .ts --fix src",
     "build": "tsc",
-    "watch-node": "nodemon dist/src/index.js",
-    "watch-ts": "tsc --watch",
+    "watch": "tsc --watch",
     "prestart": "npm run build",
-    "start": "node dist/src/index.ts",
+    "start": "concurrently --kill-others \"npm run watch\" \"nodemon .\"",
     "postinstall": "tsc",
     "deploy": "git add . && git commit -m Heroku && git push heroku main"
   },
