ran npm install, changed start script to node dist/index.js

--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "prebuild": "eslint --ext .ts --fix src",
     "build": "tsc",
     "watch": "tsc --watch",
+    "watch-node": "nodemon dist/index.js",
     "prestart": "npm run build",
-    "start": "concurrently --kill-others \"npm run watch\" \"nodemon .\"",
+    "start": "node dist/index.js",
     "postinstall": "tsc",
     "deploy": "git add . && git commit -m Heroku && git push heroku main"
   },
