--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.16",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "@typescript-eslint/parser": "^5.50.0",
@@ -39,6 +40,7 @@
     "eslint": "^8.33.0",
     "express": "^4.18.2",
     "firebase-auth-middleware": "^1.0.0",
+    "jsonwebtoken": "^9.0.0",
     "mysql-client": "^0.3.0",
     "socket.io": "^4.5.4",
     "uuid": "^9.0.0"
